--- a/dockerfile.txt
+++ b/dockerfile.txt
@@ -1,6 +1,4 @@
-Flask>=2.2.0
-opencv-python==4.10.0.84
-gunicorn==20.1.0
-numpy>=1.21.2,<2.0.0
-boto3==1.24.0
-Werkzeug>=2.2.0
+Flask==2.3.2
+boto3==1.28.20
+opencv-python-headless==4.8.0.76
+numpy==1.23.5
